# ember

./: CMakeLists.txt  README.md  disasm.py
ash/: CMakeLists.txt  STATUS.md
ash/docs/: man.md
ash/tools/ashc/: main.cpp
ashc/: CMakeLists.txt
ashc/include/ash/lex/: lexer.hpp
ashc/include/ash/rep/: tokens.hpp
ashc/lib/lex/: lexer.cpp
ashc/tests/: test.ash
ashc/tools/ashc/: main.cpp
docs/: ash-man.md
sparkle/: CMakeLists.txt  STATUS.md
sparkle/docs/sprout/: intro.md
sparkle/include/sparkle/ir/: builder.hpp
sparkle/include/sparkle/ir/passes/: aa.hpp  dce.hpp  manager.hpp  pass.hpp
sparkle/include/sparkle/ir/utils/: irdump.hpp
sparkle/include/sparkle/sprout/: builder.hpp  node.hpp  region.hpp
sparkle/include/sparkle/sprout/passes/: aa.hpp  dce.hpp  ipa.hpp  ipo.hpp  pass.hpp  pre.hpp
sparkle/include/sparkle/sprout/utils/: dump.hpp  irutils.hpp
sparkle/lib/ir/pass/: manager.cpp
sparkle/lib/ir/passes/: aa.cpp  dce.cpp
sparkle/lib/ir/utils/: irdump.cpp
sparkle/lib/sprout/: region.cpp
sparkle/lib/sprout/passes/: aa.cpp  dce.cpp  ipa.cpp  ipo.cpp  pre.cpp
sparkle/lib/sprout/utils/: dump.cpp  irutils.cpp  printer.cpp
sparkle/tests/ir/: aa.cpp  dce.cpp
sparkle/tests/mcodegen/: aarch64.cpp
sparkle/tests/optimization/: aa.cpp  dce.cpp  integration.cpp  ipa.cpp  ipo.cpp  pre.cpp
